# point-cloud-annotation-tool

./: .directory  .gitignore  Annotaion.cpp  Annotaion.h  CMakeLists.txt  LICENSE  README.md  anno_PCLVisualizerInteractorStyle.cpp  anno_PCLVisualizerInteractorStyle.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectAnnotaion.cpp  objectAnnotaion.h  select_rect.cpp  select_rect.h  visualizer.cpp  visualizer.h  vtkAnnotationBoxSource.cpp  vtkAnnotationBoxSource.h  vtkBoxWidgetCallback.cpp  vtkBoxWidgetCallback.h  vtkBoxWidgetRestricted.cpp  vtkBoxWidgetRestricted.h
.circleci/: config.yaml  config.yml
pcl/annotation/: annotation.h
pcl/test/: BoxWidget.cxx  test.cxx
pcl/visualization/: MyCloudLUT.cpp  MyCloudLUT.h  PointCloudColorHandlerLUT.h  pcl_visualizer.cpp  pcl_visualizer.h  pcl_visualizer_extented.cpp  pcl_visualizer_extented.h
test/: CMakeLists.txt  QVTKWidgetTest.cxx  QVTKWidgetTest.ui  vtkAnnotationBoxSourceTest.cxx  vtkBoxWidgetRestrictedTest.cxx
tool/: CMakeLists.txt  visiualizer.cxx
view/: flowlayout.cpp  flowlayout.h
